add random player

--- a/DeepLearningDemo.MarioKart/MainWindow.xaml
+++ b/DeepLearningDemo.MarioKart/MainWindow.xaml
@@ -12,6 +12,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -30,6 +31,8 @@
         <ProgressBar Grid.Row="2" Grid.Column="1" Margin="2" Padding="2"/>
 
         <Button Content="Deploy" Grid.Row="3" Margin="2" Padding="2"/>
+
+        <Button Content="Random Play" Grid.Row="4" Margin="2" Padding="2" Click="Button_Click_1"/>
 
         <Image x:Name="img" Grid.Row="5" Grid.Column="3" />
 
