--- a/DeepLearningDemo.DigitRecognizer/MainWindow.xaml
+++ b/DeepLearningDemo.DigitRecognizer/MainWindow.xaml
@@ -25,14 +25,22 @@
 
         <Button Content="Train" Grid.Row="1" Margin="2" Padding="2" Click="Button_Click_2"/>
         <ProgressBar Grid.Row="1" Grid.Column="1" Margin="2" Padding="2"/>
+        <TextBlock x:Name="trainingStats" Grid.Row="1" Grid.Column="3" Margin="2" Padding="2"/>
 
         <Button Content="Test" Grid.Row="2" Margin="2" Padding="2" Click="Button_Click_1"/>
         <ProgressBar Grid.Row="2" Grid.Column="1" Margin="2" Padding="2"/>
+        <TextBlock x:Name="testsResult" Grid.Row="2" Grid.Column="3" Margin="2" Padding="2"/>
 
-        <Button Content="Deploy" Grid.Row="3" Margin="2" Padding="2"/>
+        <Button Content="Deploy" Grid.Row="3" Margin="2" Padding="2" Click="Button_Click_3"/>
 
         <Image x:Name="img" Grid.Row="5" Grid.Column="3" />
 
-        <ListBox x:Name="keys" Grid.Row="5"/>
+        <ListBox x:Name="tests" Grid.Row="5">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Image Source="{Binding}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Window>
