--- a/DeepLearningDemo.MarioKart/MainWindow.xaml
+++ b/DeepLearningDemo.MarioKart/MainWindow.xaml
@@ -31,7 +31,7 @@
         <Button Content="Test" Grid.Row="2" Margin="2" Padding="2"/>
         <ProgressBar Grid.Row="2" Grid.Column="1" Margin="2" Padding="2"/>
 
-        <Button Content="Deploy" Grid.Row="3" Margin="2" Padding="2"/>
+        <Button Content="Deploy" Grid.Row="3" Margin="2" Padding="2" Click="Button_Click_3"/>
 
         <Button Content="Random Play" Grid.Row="4" Margin="2" Padding="2" Click="Button_Click_1"/>
 
